added indexOf/lastIndexOf/retainAll IntArrayList